removed image to ascii package

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "express": "^4.13.4",
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-express-server": "^0.5.3",
-    "image-to-ascii": "^3.0.1"
+    "grunt-express-server": "^0.5.3"
   }
 }
